--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                                             <button class="uk-button uk-button-default" id="showResultFile">Apercu</button>
                                             <button class="uk-button uk-button-primary" id="">Ouvrir</button>
                                             <div uk-dropdown>
-                                                    <div class="uk-form-controls">
+                                                    <div class="uk-form-controls uk-background-primary">
                                                             <select class="uk-select" id="openResultFileOptions">
-                                                                <option>Choisir l'éditeur</option>
+                                                                <option value="choice">Choisir l'éditeur</option>
                                                                 <option value="Excel.exe">Excel</option>
                                                                 <option value="notepad++">Notepad</option>
                                                             </select>
