--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
 
 </html>
 </div>
-<!--<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
+<script src="./lib/canvasjs/canvasjs.min.js"></script>
 <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 <script src="./renderer-process/renderer.js"></script>
 </body>
